packages/client/src/main.css
@import '@navikt/ds-tokens';

/* @tailwind base; */
/* @tailwind components; */
/* @tailwind utilities; */

html,
body {
  height: auto;
}

:root {
  --primary-font: 'Source Sans 3';
}

/* workaround for aksel */

/* Resets */
button {
  border: none;
  background: none;
  padding: 0;
  margin: 0;
  font: inherit;
  color: inherit;
  cursor: pointer;
}

a {
  text-decoration: none;
}

body {
  font-family: 'Source Sans 3', sans-serif;
  line-height: 1.333;
  font-size: 1.125rem;
  margin: 0;
  display: grid;
  grid-template-rows: auto 1fr auto;
  background-color: var(--a-bg-subtle);
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
}

.footer {
  background-color: #003453;
  color: white;
  padding: 2.75rem 1.5rem 6rem;
}

.footer-content {
  max-width: 1344px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  gap: 2.25rem;
}

.to-top-link {
  font-size: 1.25rem;
  padding: 1rem 1rem 1rem 0;
  display: inline-flex;
  gap: 0.5rem;
  align-items: center;
}

.footer-links {
  columns: 22rem 3;
}

.footer-link-list {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.footer-link-heading {
  break-inside: avoid-column;
  color: #99c4dd;
  letter-spacing: 0.15em;
  text-transform: uppercase;
  font-size: 0.875rem;
  margin-bottom: 0.5rem;
}

.footer-link-item {
  break-before: avoid-column;
  break-inside: avoid-column;
}

.footer-link {
  color: inherit;
  display: flex;
  gap: 0.5rem;
  align-items: center;
  padding: 0.5rem 0;
  text-decoration-color: #99c4dd;
  text-decoration-thickness: 0.0625em;
  text-underline-offset: 0.15em;
}

.simple-footer {
  border-top: 2px solid #0067c5;
  background-color: white;
  margin: 0 auto;
  padding: 1rem 3rem;
  color: #0067c5;
}

.simple-footer .footer-link-list {
  flex-direction: row;
}

.simple-footer .footer-link-list :last-child {
  margin-left: auto;
}

.simple-footer .footer-link {
  padding: 0.25rem 0;
  gap: 0.25rem;
  text-decoration: underline;
}

/* HEADER AND MENU */
#menu {
  position: absolute;
  top: 79px;
  margin: 0 auto;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  background-color: white;
  max-width: 1440px;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  display: none;
  padding: 32px;
  padding-left: var(--a-spacing-12);
  padding-top: var(--a-spacing-6);
  box-sizing: border-box;
}

#menu h2 {
  font-weight: 600;
  margin-top: 0px;
  margin-bottom: 0px;
  font-size: 24px;
  line-height: 32px;
  letter-spacing: -0.048px;
}

#menu-items {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

#menu-items-universal-links {
  order: 1;
  display: flex;
}

#menu-items:has(.loggedin) #menu-items-universal-links {
  order: 2;
}

#login-button {
  order: 2;
}

#logged-in-menu {
  background-color: rgba(230, 240, 255, 1);
  height: 100%;
  order: 2;
  display: flex;
  align-items: center;
  padding: 0 var(--a-spacing-2);
}

#simple-logged-in-menu {
  height: 100%;
  padding: 0 var(--a-spacing-2);
  display: flex;
  align-items: center;
}

#simple-logged-in-menu p {
  white-space: nowrap;
  margin: 0 var(--a-spacing-4);
}

@media (--breakpoint-md) {
  #simple-logged-in-menu p {
    display: none;
  }
}

/* @TODO: Maybe better scoped name */
.link {
  /* color is text-text-action, replace later */
  color: var(--a-text-action);
  text-decoration-line: underline;
  padding-top: 0.5rem /* 8px */;
  padding-bottom: 0.75rem /* 12px */;
  display: inline-block;
  text-underline-offset: 3px;
}

/* Used for til min forside etc */
.big-link {
  color: rgba(0, 103, 197, 1);
  text-decoration-line: underline;
  padding-top: var(--a-spacing-2);
  padding-bottom: var(--a-spacing-3);
  display: inline-block;
}

#menu-background {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(50, 65, 79, 0.8);
  z-index: 10;
  opacity: 0;
  pointer-events: none;
  transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1);
}

.siteheader {
  position: relative;
  height: 79px;
  background-color: rgba(255, 255, 255, 1);
  border-bottom: 1px solid rgba(207, 207, 207, 1);
  z-index: 20;
}

.siteheader .hovedmeny-wrapper {
  max-width: 1344px;
  width: 100%;
  margin: 0 auto;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

.hovedmeny-wrapper .hovedmeny-content {
  display: flex;
  align-items: center;
  height: 100%;
  width: 100%;
  padding-left: var(--a-spacing-12);
}

@media (--breakpoint-lg) {
  .hovedmeny-wrapper .hovedmeny-content {
    padding-left: var(--a-spacing-4);
  }
}

.context-link {
  height: 100%;
  display: flex;
  align-items: center;
  border-bottom: 4px solid transparent;
  padding: 0 1rem;
}

.context-link:hover {
  border-color: var(--a-gray-300);
}

.context-link.lenkeActive {
  font-weight: bold;
  border-color: var(--a-text-action);
}

#arbeidsflate {
  display: flex;
  height: 100%;
  align-items: center;
  margin-left: 40px;
}

#menu.active {
  display: block;
}

#menu-background.active {
  opacity: 1;
  pointer-events: auto;
}

#loggedin-menu-wrapper {
  position: absolute;
  top: 79px;
  right: 0;
  width: 100%;
  display: none;
  pointer-events: none;
}

#loggedin-menu-wrapper.active {
  display: block;
}

#loggedin-menu-content {
  max-width: 1450px;
  margin: 0 auto;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

#loggedin-menu-content .dropdown {
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  padding: var(--a-spacing-8);
  pointer-events: auto;
}

#varsler-menu-content {
  max-width: 570px;
  max-height: 80vh;
  overflow-y: scroll;
  width: 100%;
  box-sizing: border-box;
  display: none;
  background-color: #f7f7f7;
  padding-top: var(--a-spacing-2);
}

#loggedin-menu-content #varsler-menu-content {
  padding-top: var(--a-spacing-3);
}

#varsler-menu-content.active {
  display: block;
}
/* ... */

